--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,25 +25,25 @@
         app:srcCompat="@drawable/betmelogo" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/logemail"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/imageView"
         android:layout_marginEnd="90dp"
         android:layout_marginTop="47dp"
-        android:hint="@string/username"
+        android:hint="@string/logemail"
         android:background="#11000000"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:drawableStart="@drawable/ic_action_username"/>
 
     <EditText
         android:id="@+id/password"
         android:layout_width="220dp"
         android:layout_height="50dp"
-        android:layout_alignEnd="@+id/username"
-        android:layout_below="@+id/username"
+        android:layout_alignEnd="@+id/logemail"
+        android:layout_below="@+id/logemail"
         android:hint="@string/password"
         android:background="#11000000"
         android:layout_marginTop="28dp"
@@ -82,6 +82,15 @@
         android:text="@string/sign_up"
         android:textSize="16sp"
         tools:text="Sign Up" />
+
+    <ProgressBar
+        android:id="@+id/progressLogIn"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/signUp"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
