--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/androidtheme"
     tools:context="app.betme.betme.Register">
+
+    <EditText
+        android:id="@+id/registerName"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/registerEmail"
+        android:layout_marginTop="79dp"
+        android:background="#11000000"
+        android:drawableStart="@drawable/ic_action_username"
+        android:ems="10"
+        android:hint="@string/enter_display_name"
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/emailExists"
@@ -16,28 +28,6 @@
         android:layout_marginTop="14dp"
         android:text="@string/emailExists"
         android:visibility="gone"
-        android:textColor="@color/colorError" />
-
-    <TextView
-        android:id="@+id/usernameExists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/registerUsername"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:text="@string/usernameExists"
-        android:visibility="gone"
-        android:textColor="@color/colorError" />
-
-    <TextView
-        android:id="@+id/EmptyUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/registerUsername"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:visibility="gone"
-        android:text="@string/EmptyUsernameReg"
         android:textColor="@color/colorError" />
 
     <TextView
@@ -72,25 +62,12 @@
         android:text="@string/register_button" />
 
     <EditText
-        android:id="@+id/registerUsername"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/registerEmail"
-        android:layout_marginTop="67dp"
-        android:background="#11000000"
-        android:drawableStart="@drawable/ic_action_username"
-        android:ems="10"
-        android:hint="@string/register_username"
-        android:inputType="textPersonName" />
-
-    <EditText
         android:id="@+id/registerEmail"
         android:layout_width="220dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/registerUsername"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="168dp"
         android:background="#11000000"
         android:drawableStart="@drawable/ic_action_email"
         android:ems="10"
@@ -109,6 +86,8 @@
         android:ems="10"
         android:hint="@string/register_password"
         android:inputType="textPassword" />
+    
+
 
     <EditText
         android:id="@+id/registerConfirmPassword"
@@ -131,15 +110,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:id="@+id/EmptyPass"
+    <ProgressBar
+        android:id="@+id/progressSignUp"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/registerPassword"
+        android:layout_alignTop="@+id/registerButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:visibility="gone"
-        android:text="@string/EmptyPassReg"
-        android:textColor="@color/colorError" />
+        />
+
 
 </RelativeLayout>
