--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorYellow">#e5f442</color>
     <color name="colorMoney">#34d61b</color>
     <color name="colorBlue">#35c0fc</color>
+    <color name="colorWhite">#ffffff</color>
 
 </resources>
